<resources>
    <string name="app_name">AndroidDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bookmark">BookmarkActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_scrolling">Scrolling</string>
    <string name="title_activity_Image">Image</string>
    <string name="title_activity_Login">Login</string>
    <string name="title_activity_image_detail">ImageDetail</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_result">Search%s</string>
    <string name="title_activity_module">Module</string>
    <string name="title_activity_board_detail">BoardDetail</string>
    <string name="title_activity_my_following">Following</string>
    <string name="title_activity_user">User Information</string>

    <string name="title_fragment_gather">Gather</string>
    <string name="title_fragment_board">Boards</string>
    <string name="title_fragment_user">User</string>
    <string name="title_fragment_like">Like</string>


    <string name="title_fragment_attention_pins">Attention Gather</string>
    <string name="title_fragment_attention_board">Attention Board</string>


    <string name="action_settings">setting</string>

    <string name="snack_message_main_gather">start to gather</string>
    <string name="snack_message_not_notify">not new data</string>
    <string name="snack_message_login_success">login success</string>
    <string name="snack_message_net_error">network error please to check network</string>
    <string name="snack_message_timeout_error">time out please to check network</string>
    <string name="snack_message_password_error">This password is incorrect</string>
    <string name="snack_message_unknown_error">unknown error</string>
    <string name="snack_message_data_error">data error</string>
    <string name="snack_action_to_setting">Setting</string>


    <string name="nav_user_name">username</string>
    <string name="nav_user_email">user@email.com</string>
    <string name="nav_attention">attention</string>
    <string name="nav_gather">gather</string>
    <string name="nav_message">message</string>
    <string name="nav_friends">friend</string>
    <string name="nav_used_scan">scan</string>


    <string name="action_bar_search">Search</string>
    <string name="action_bar_add">Add</string>
    <string name="action_bar_edit">Edit</string>
    <string name="action_bar_like">Like</string>
    <string name="action_bar_download">Download</string>
    <string name="action_bar_gather">Gather</string>
    <string name="action_bar_follow">Follow</string>
    <string name="action_bar_user_setting">User Setting</string>

    <string name="hint_search">key</string>
    <string name="hint_not_history">noting</string>

    <string name="text_search_history">History</string>
    <string name="text_reference">reference</string>

    <string name="card_title">测试Card的title应该是很长的文本</string>
    <string name="card_username">用户名14sp</string>
    <string name="card_gather">采集到图库14sp</string>


    <string name="net_error">net error</string>
    <string name="net_error_data">net error on data</string>


    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This Username is invalid</string>
    <string name="error_empty_password">This password is empty</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_foot_loading">loading</string>
    <string name="text_foot_error">error</string>
    <string name="text_foot_end">end</string>

    <string name="text_like_number">%d like</string>
    <string name="text_gather_number">%d gather</string>
    <string name="text_attention_number">%d attention</string>
    <string name="text_by_username">by %s</string>
    <string name="text_fans_number">fans %d</string>
    <string name="text_fans_attention">%1$d fans %2$d follower</string>
    <string name="text_edit">Edit</string>
    <string name="text_following">Following</string>
    <string name="text_followed">Followed</string>
    <string name="text_auto_login_fail">Auto Login Fail</string>

    <string name="text_image_describe_null">noting describe</string>
    <string name="text_is_default">Default</string>
    <string name="text_board_describe_null">noting describe</string>
    <string name="text_recommend">recommend</string>
    <string name="text_to">To</string>
    <string name="title_activity_settings">Settings</string>

    <string name="dialog_title_gather">Gather</string>
    <string name="dialog_title_delete">Delete</string>
    <string name="dialog_title_edit">Edit</string>
    <string name="dialog_title_add">Add</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_gather_positive">Gather</string>
    <string name="dialog_add_positive">Add</string>
    <string name="dialog_edit_positive">Confirm</string>
    <string name="dialog_edit_neutral">Delete This</string>
    <string name="dialog_delete_positive">Delete</string>

    <string name="dialog_delete_message">will delete all image in this %s board</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="text_gather_warning">has been to gather to %s</string>
    <string name="title_activity_search_petal">SearchPetalActivity</string>
    <string name="title_activity_search_petal_result">SearchPetalResultActivity</string>
    <string name="title_activity_petal_type">PetalTypeActivity</string>


    <string name="header">2048</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_game">New Game</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="score">SCORE</string>
    <string name="instructions">&#160;&#160;Join the numbers and get to the 2048 title.</string>
    <string name="you_win">You Win!</string>
    <string name="game_over">Game Over!</string>
    <string name="go_on">Tap to Continue</string>
    <string name="for_now">For now&#8230;</string>
    <string name="endless">"Endless" Mode</string>
    <string name="title_activity_media">MediaActivity</string>
</resources>
